--- a/accounts/templates/accounts/change_password.html
+++ b/accounts/templates/accounts/change_password.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="{% static 'css/login.css' %}">
 <style media="screen">
   .box{
-    background :#FF00FF;
+    background :#a830c1;
   }
 
 </style>
@@ -113,12 +113,12 @@
 <div class = "overlay">
   <div>
   <form class="box" method="POST">
-  
+
     <h1>Change Password</h1>
     {% csrf_token %}
     {{ form }}
     <button class="btn btn-lg btn-primary btn-block" id="submit" type="submit">Save Changes</button>
-      <a href="{% url 'home' %}"><h6>Back To The Home Screen</h6></a>
+      <a href="{% url 'home' %}"><h6 style ="text-align: center;color: #0383ae;font-size:20px;">Back To The Home Screen</h6></a>
   </form>
   </div>
 </div>
