--- a/grievance/templates/grievance/resolvefeedback.html
+++ b/grievance/templates/grievance/resolvefeedback.html
@@ -106,7 +106,8 @@
     {% csrf_token %}
 
 <div id="form">
-<div class="logo">
+<div class="logo"style ="text-align: center;color: #0383ae; margin-top:10px; font-size: 25px;">
+    <b>Resolved Complain</b>
   {% if error %}
      <li class="error-message" style="
   color: black; font-size: 18px; text-align: center;">{{ error}}</li>
