--- a/Grievance_System/templates/base.html
+++ b/Grievance_System/templates/base.html
@@ -13,6 +13,7 @@
 
     <!-- Bootstrap core CSS -->
       <script src="https://code.jquery.com/jquery-3.2.0.min.js" type="text/javascript"></script>
+        <link rel="shortcut icon" href="{% static 'logo.jpg' %}" type="image/x-icon" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="{% static 'open-iconic/font/css/open-iconic-bootstrap.css' %}" rel ="stylesheet">
     <link rel="stylesheet" href="{% static 'css/basefile.css' %}">
