--- a/Grievance_System/templates/dashboad.html
+++ b/Grievance_System/templates/dashboad.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="{% static 'open-iconic/font/css/open-iconic-bootstrap.css' %}" rel ="stylesheet">
     <link rel="stylesheet" href="{% static 'css/basefile.css' %}">
+      <link rel="shortcut icon" href="{% static 'logo.jpg' %}" type="image/x-icon" />
     <style media="screen">
       .blue { color: #185875; }
 
