--- a/grievance/templates/grievance/etc.html
+++ b/grievance/templates/grievance/etc.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html >
   <head>
-    <title>Grievance view</title>
+    <link rel="shortcut icon" href="{% static 'logo.jpg' %}" type="image/x-icon" />
+  <title>Grievance view ETC Department</title>
     <style media="screen">
       .btn {
         background-color:#24A91F;
