--- a/grievance/templates/grievance/log_complain.html
+++ b/grievance/templates/grievance/log_complain.html
@@ -110,7 +110,7 @@
 <div class="logo" style ="text-align: center;color: #0383ae; margin-top:10px; font-size: 25px;">
   <b>Log Complain</b>
   {% if error %}
-     <li class="error-message">{{ error}}</li>
+     <li class="error-message" style ="text-align: center;color: red;">{{ error}}</li>
   {% endif %}
   <br>
 </div>
