--- a/grievance/templates/grievance/reject.html
+++ b/grievance/templates/grievance/reject.html
@@ -105,10 +105,11 @@
     {% csrf_token %}
 
 <div id="form">
-<div class="logo">
+<div class="logo"style ="text-align: center;color: #0383ae; margin-top:10px; font-size: 25px;">
+  <b>Reject Complain</b>
   {% if error %}
      <li class="error-message" style="
-  color: black; font-size: 18px; text-align: center;">{{ error}}</li>
+  color: red; font-size: 18px; text-align: center;">{{ error}}</li>
   {% endif %}
   <br>
 </div>
