--- a/grievance/templates/grievance/view.html
+++ b/grievance/templates/grievance/view.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
+{% load staticfiles %}
+
 <html >
   <head>
+    <link rel="shortcut icon" href="{% static 'logo.jpg' %}" type="image/x-icon" />
     <title>Grievance view</title>
+  </head>
     <style media="screen">
       .btn {
         background-color:#24A91F;
