--- a/grievance/templates/grievance/log_complain.html
+++ b/grievance/templates/grievance/log_complain.html
@@ -117,19 +117,16 @@
 <br>
 
 		<div class="form-item">
-			<p class="formLabel">Name</p>
-			<input type="text" name="name" id="name" class="form-style" autocomplete="off"  style=" border-color: #719ECE;
+			<input type="text" placeholder="Name" name="name" id="name" class="form-style" autocomplete="off"  style=" border-color: #719ECE;
           box-shadow: 0 0 10px #719ECE;"/>
 		</div>
     <div class="form-item">
-			<p class="formLabel">Grievance Title</p>
-			<input type="text" name="title" id="title" class="form-style" autocomplete="off"  style=" border-color: #719ECE;
+			<input type="text" placeholder="Grievance Title" name="title" id="title" class="form-style" autocomplete="off"  style=" border-color: #719ECE;
           box-shadow: 0 0 10px #719ECE;"/>
 			<!-- <div class="pw-view"><i class="fa fa-eye"></i></div> -->
 		</div>
     <div class="form-item">
-			<p class="formLabel">Your Phone Number</p>
-			<input type="text" name="phone_number" id="phone_number" class="form-style" onkeypress="return numbersonly(event);" maxlength="10" autocomplete="off"  style=" border-color: #719ECE;
+			<input type="text" placeholder="Phone Number" name="phone_number" id="phone_number" class="form-style" onkeypress="return numbersonly(event);" maxlength="10" autocomplete="off"  style=" border-color: #719ECE;
           box-shadow: 0 0 10px #719ECE;" />
 			<!-- <div class="pw-view"><i class="fa fa-eye"></i></div> -->
 		</div>
@@ -138,14 +135,14 @@
           box-shadow: 0 0 10px #719ECE; -webkit-border-radius: 25px;
           -moz-border-radius: 25px;
           border-radius: 25px; height:42px;
-          width:360px;>
+          width:360px;color:#8a8a8a;>
   <option value="" style="color:#8a8a8a;">Your's Position</option>
-  <option value="CS">Computer Science</option>
-  <option value="M">Mechanical</option>
-  <option value="C">Civil</option>
-  <option value="E">ETC</option>
-  <option value="EE">Electrical Engginering</option>
-  <option value="F">Faculty</option>
+  <option value="CS" style="color:#719ECE;">Computer Science</option>
+  <option value="M" style="color:#719ECE;">Mechanical</option>
+  <option value="C" style="color:#719ECE;">Civil</option>
+  <option value="E" style="color:#719ECE;">ETC</option>
+  <option value="EE" style="color:#719ECE;">Electrical Engginering</option>
+  <option value="F" style="color:#719ECE;">Faculty</option>
 </select>
 			<!-- <div class="pw-view"><i class="fa fa-eye"></i></div> -->
 		</div>
@@ -154,10 +151,10 @@
           box-shadow: 0 0 10px #719ECE; -webkit-border-radius: 25px;
           -moz-border-radius: 25px;
           border-radius: 25px; height:42px;
-          width:360px;>
+          width:360px;color:#8a8a8a;>
   <option value="" style="color:#8a8a8a;">Gender</option>
-  <option value="M">Male</option>
-  <option value="F">Female</option>
+  <option value="M" style="color:#719ECE;">Male</option>
+  <option value="F" style="color:#719ECE;">Female</option>
 
 </select>
       <!-- <div class="pw-view"><i class="fa fa-eye"></i></div> -->
@@ -167,7 +164,7 @@
 <textarea  name="content" id="conten" placeholder="Type your Message in details...." class="form-style"  style=" border-color: #719ECE;
     box-shadow: 0 0 10px #719ECE; -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
-    border-radius: 5px;" rows="6" cols="43" autocomplete="off" required ></textarea>
+    border-radius: 5px;" rows="6" cols="41" autocomplete="off" required ></textarea>
 		</div>
 		<div class="form-item">
       		<p class="pull-left"><a href="{% url 'home' %}"><small>Back To The Home Screen!!<small></a></p>
