--- a/grievance/templates/grievance/viewstatus.html
+++ b/grievance/templates/grievance/viewstatus.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <h3 align="center" class="yellow">hello,{{request.user.username}}</h3>
-  <h1><span class="blue">&lt;</span>Grievance Record<span class="blue">&gt;</span> <span class="yellow">Status</span></h1>
+  <h1><span class="blue"></span>Grievance Record<span class="blue"></span> <span class="yellow">Status</span></h1>
   <br>
   <h3 align="center" ><a class="yellow" href="{% url 'home' %}">Back To Home Screen</a><h3>
 
