--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -106,15 +106,15 @@
     <h1>Login</h1>
     {% if error %}
      <h3 class="error-message" style="
-  color: white; font-size: 16px">{{ error}}</h3>
+  color: red; font-size: 16px">{{ error}}</h3>
      {% endif %}
 
     <input type="text" name="username" id="username" placeholder="Username" autocomplete="off" minlength="5" maxlength="25">
     <input type="password" name="password1" id="password1" placeholder=" Password" autocomplete="off">
     <input type="submit" id="submit" value="Log In!">
-      <a href="{% url 'password_reset' %}"><h6 style="color: blue">Forgot Password</h6></a>
+      <a href="{% url 'password_reset' %}"><h6 style="color: white">Forgot Password</h6></a>
       <br>
-      <a href="{% url 'home' %}"><h6 style="color: blue">Back To The Home Screen</h6></a>
+      <a href="{% url 'home' %}"><h6 style="color: white">Back To The Home Screen</h6></a>
 
   </form>
 
