--- a/grievance/templates/grievance/approve.html
+++ b/grievance/templates/grievance/approve.html
@@ -117,8 +117,7 @@
   <br>
 </div>
 		<div class="form-item">
-			<p class="formLabel" >Grievance Type</p>
-			<input type="text" name="type" id="type" class="form-style" autocomplete="off"  style=" border-color: #719ECE;
+			<input type="text" placeholder="Grievance Type" name="type" id="type" class="form-style" autocomplete="off"  style=" border-color: #719ECE;
           box-shadow: 0 0 10px #719ECE;" required/>
 		</div>
 
@@ -127,7 +126,7 @@
 <textarea  name="verifeedback" id="conten" placeholder="Feedback...." class="form-style"  style=" border-color: #719ECE;
     box-shadow: 0 0 10px #719ECE; -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
-    border-radius: 5px;" rows="6" cols="43" autocomplete="off" required ></textarea>
+    border-radius: 5px;" rows="6" cols="42" autocomplete="off" required ></textarea>
 		</div>
 		<div class="form-item">
       		<p class="pull-left"><a href="{% url 'home' %}"><small>Back To The Home Screen!!<small></a></p>
