--- a/grievance/templates/grievance/view.html
+++ b/grievance/templates/grievance/view.html
@@ -43,9 +43,9 @@
   </head>
   <body>
     <h3 align="center" class="yellow">hello,{{request.user.username}}</h3>
-  <h1><span class="blue">&lt;</span>Grievance Record<span class="blue">&gt;</span> <span class="yellow">Verification</span></h1>
+  <h1><span class="blue"></span>Grievance Record<span class="blue"></span> <span class="yellow">Verification</span></h1>
   <br>
-  <h3 align="center" ><a class="yellow" href="{% url 'home' %}">Back To Home Screen</a><h3>
+  <h3 align="center" ><a class="yellow" ; href="{% url 'home' %}">Back To Home Screen</a><h3>
 
 
   <table class="container" class="responsive-table" style="font-size: 90%; width: 100%" >
